--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "connect-multiparty": "^2.2.0",
     "express": "^4.17.1",
     "jwt-simple": "^0.5.6",
-    "moment": "^2.28.0"
+    "moment": "^2.28.0",
+    "pg": "^8.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
