--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "express": "^4.17.1",
     "jwt-simple": "^0.5.6",
     "moment": "^2.28.0",
-    "pg": "^8.4.1"
+    "multer": "^1.4.2",
+    "pg": "^8.4.1",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
