--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^2.9.4",
     "jquery": "^3.5.1",
     "ng2-charts": "^2.4.2",
+    "ngx-filter-pipe": "^2.1.2",
     "ngx-image-cropper": "^3.2.1",
     "ngx-image2dataurl": "^10.0.1",
     "popper.js": "^1.16.1",
