--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,7 +39,7 @@
     "@angular/cli": "~10.1.3",
     "@angular/compiler-cli": "~10.1.3",
     "@angular/google-maps": "^10.2.7",
-    "@types/googlemaps": "^3.40.3",
+    "@types/googlemaps": "3.39.12",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
