--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
     "@auth0/angular-jwt": "^5.0.1",
+    "baguettebox.js": "^1.11.1",
     "bootstrap": "^4.5.2",
     "chart.js": "^2.9.4",
     "jquery": "^3.5.1",
