--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.28.0",
     "multer": "^1.4.2",
     "pg": "^8.4.1",
+    "stripe": "^8.126.0",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
