--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
     "@auth0/angular-jwt": "^5.0.1",
+    "@stripe/stripe-js": "^1.11.0",
     "baguettebox.js": "^1.11.1",
     "bootstrap": "^4.5.2",
     "chart.js": "^2.9.4",
@@ -29,8 +30,10 @@
     "ngx-filter-pipe": "^2.1.2",
     "ngx-image-cropper": "^3.2.1",
     "ngx-image2dataurl": "^10.0.1",
+    "ngx-stripe": "^10.1.2",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
+    "stripe": "^8.126.0",
     "sweetalert2": "^10.6.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
