--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,8 @@
     "ngx-image-cropper": "^3.2.1",
     "ngx-image2dataurl": "^10.0.1",
     "ngx-stripe": "^10.1.2",
+    "pdfmake": "^0.1.68",
+    "pdfmake-wrapper": "^2.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "stripe": "^8.126.0",
